fixed "home" link

--- a/survey.html
+++ b/survey.html
@@ -15,7 +15,7 @@
     <nav>
         <ul class = "menus">
             <li class = "menu">
-                <div class="menu-heading">Home</div>
+              <div class="menu-heading"><a href="http://project1.twenty7.me/index.html">Home</a></div>
             </li>
             <li class = "menu">
                 <div class="menu-heading">Characters</div>
