Nu Validator checks

--- a/jared.html
+++ b/jared.html
@@ -50,7 +50,7 @@
       <li class = "statlist-item">Constitution: <span>15</span></li>
       <li class = "statlist-item">Intelligence: <span>13</span></li>
       <li class = "statlist-item">Wisdom: <span>12</span></li>
-      <li class = "statlist-item">Charisma: <span class="statvalhigh">20</span></li></li>
+      <li class = "statlist-item">Charisma: <span class="statvalhigh">20</span></li>
     </ul>
   </div>
   <p class = "bio">
