--- a/report.html
+++ b/report.html
@@ -56,7 +56,7 @@
         <li class = "report-item">I use a red flower as this website's favicon. Each page declares it.</li>
         <li class = "report-item">I did not use and JS but there are folders for CSS and images.</li>
         <li class = "report-item">I did not use any external libraries.</li>
-        <li class = "report-item">NU CHECKER</li>
+        <li class = "report-item">All green.</li>
         <li class = "report-item">Admittedly, my site has a good amount of center-alignmentment on the horizontal. I like the way the centered headers, images, and captions draw your eye along the page. 
             When I have long text-blocks, like character bios and stats, they are usually left-aligned. 
         </li>
@@ -76,6 +76,6 @@
             have the most commits, I'm not sure, but that doesn't mean I added most of the content that day.</li>
         <li class = "report-item">Ok.</li>
     </ol>
-
+    </main>
 </body>
 </html>
