--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
 
     <h1 class="header">The Mystery of the <span id="red">Red Flower</span></h1>
-    <figcaption>A Dungeons & Dragons: 5e Campaign</figcaption>
+    <p id = "caption">A Dungeons & Dragons: 5e Campaign</p>
     <img class="bracer" src="/images/bracer.png" alt = "Bracer Emblem">
     <p>
         In the world of <span class="keyword">Idrium</span>, evil goes unchecked save for the brave men and women aligned with the <span class="keyword">Bracers</span>. These 
