--- a/report.html
+++ b/report.html
@@ -43,10 +43,10 @@
           existing players. 
         </li>
         <li class = "report-item">
-            Some of the images here were created by my. Others are in the public domain.
+            Some of the images here were created by my friends and I. Others are in the public domain.
             Almost all text was written by me, though some was borrowed from friends (such as the quotes).
         </li>
-        <li class = "report-item">I have eight pages on the site if you count this one.</li>
+        <li class = "report-item">I have nine pages on the site if you count this one.</li>
         <li class = "report-item">There is a header on each page which features the title of our game and a picture of our headquarters.</li>
         <li class = "report-item">I have a nav-bar across each page.</li>
         <li class = "report-item">I use a media query to remove the side columns on small screens.</li>
@@ -65,7 +65,7 @@
         <li class = "report-item">There is a form for people wanting to join us to fill out. It can be reached from the "Apply" nav-bar link. It doesn't do anything yet, but ideally 
             it would send the application to the members of the group and invite the newcomer to our online game.</li>
         <li class = "report-item">The form above links to the website we use to play our D&D game online. </li>
-        <li class = "report-item">My code is consistently formatted and all variables use kebab-case</li>
+        <li class = "report-item">My code is consistently formatted and all variables use kebab-case.</li>
         <li class = "report-item">Hovering over the Bracer logo makes it do a spin animation. Also, hovering over the character images on the homepage has a subtle fade effect.</li>
         <li class = "report-item">It is shared, confirmed in class.</li>
         <li class = "report-item">File names are all lowercase.</li>
