--- a/survey.html
+++ b/survey.html
@@ -33,7 +33,7 @@
             </li>
         </ul>
     </nav>
-
+    <h1 class="header">The Mystery of the <span id="red">Red Flower</span></h1>
     <h1>Application</h1>
     <img class="bracer" src="/images/bracer.png" alt = "Bracer Emblem">
     <p>
